--- a/Main/Tests/Legacy Tests/FunctionalTests/FunctionalTests.csproj
+++ b/Main/Tests/Legacy Tests/FunctionalTests/FunctionalTests.csproj
@@ -88,7 +88,6 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\Source\Reference DLLs\NMock\NMock2.dll</HintPath>
     </Reference>
-    <Reference Include="nunit.framework, Version=2.4.8.0, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL" />
     <Reference Include="NUnitAsp, Version=2.0.0.41294, Culture=neutral, PublicKeyToken=f9bdb8e9d00f2b23">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\Source\Reference DLLs\NUnitASP\NUnitAsp.dll</HintPath>
@@ -345,7 +344,7 @@
   </Target>
   -->
   <PropertyGroup>
-    <PostBuildEvent>xcopy "$(TargetDir)*.*" "$(DNApages)\bin" /Y
+    <PostBuildEvent>if exist "$(DNApages)\bin" xcopy "$(TargetDir)*.*" "$(DNApages)\bin" /Y
 
 
 :_end
