--- a/Main/Tests/Legacy Tests/Tests/Tests.csproj
+++ b/Main/Tests/Legacy Tests/Tests/Tests.csproj
@@ -131,6 +131,7 @@
     <Compile Include="Dna.Data\StoredProcedureReaderTests.cs" />
     <Compile Include="Dna.Data\StoredProcedureTestInputContext.cs" />
     <Compile Include="Dna.Moderation\ProfanityFilterTests.cs" />
+    <Compile Include="Dna.Objects\XmlSchemaTests.cs" />
     <Compile Include="Dna.Sites\SiteListTests.cs" />
     <Compile Include="Dna.Sites\SiteOptionListTests.cs" />
     <Compile Include="Dna.Sites\SiteOptionTests.cs" />
@@ -220,6 +221,10 @@
     <ProjectReference Include="..\..\..\Source\Shared\BBC.DNA.Moderation.Utils\BBC.DNA.Moderation.Utils.csproj">
       <Project>{8EB8245F-927C-469B-9DBB-4BAED2A9F420}</Project>
       <Name>BBC.DNA.Moderation.Utils %28Source\Shared\BBC.Dna.Moderation.Utils\BBC.DNA.Moderation.Utils%29</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\..\Source\Shared\BBC.Dna.Objects.Tests\BBC.Dna.Objects.Tests.csproj">
+      <Project>{13939AC3-85A5-40DC-BD6E-8211451D27BB}</Project>
+      <Name>BBC.Dna.Objects.Tests</Name>
     </ProjectReference>
     <ProjectReference Include="..\..\..\Source\Shared\BBC.Dna.Objects\BBC.Dna.Objects.csproj">
       <Project>{B4EA926E-7D99-4077-8315-882F413B994D}</Project>
