--- a/Main/Source/Shared/BBC.Dna.Groups/BBC.Dna.Groups.csproj
+++ b/Main/Source/Shared/BBC.Dna.Groups/BBC.Dna.Groups.csproj
@@ -75,6 +75,7 @@
       <HintPath>..\..\Reference DLLs\EnterpriseLibrary\Microsoft.Practices.EnterpriseLibrary.Caching.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.configuration" />
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
