--- a/Main/Source/Shared/BBC.Dna.Users/BBC.Dna.Users.csproj
+++ b/Main/Source/Shared/BBC.Dna.Users/BBC.Dna.Users.csproj
@@ -127,6 +127,10 @@
       <Project>{33A2531A-AAAA-4A97-A2C1-F18E785D6F8D}</Project>
       <Name>BBC.Dna.Groups %28Source\Shared\BBC.Dna.Groups\BBC.Dna.Groups%29</Name>
     </ProjectReference>
+    <ProjectReference Include="..\BBC.Dna.Sites\BBC.Dna.Sites.csproj">
+      <Project>{2CE05465-9B21-4CD9-A592-FABD2AD051B3}</Project>
+      <Name>BBC.Dna.Sites %28Source\Shared\BBC.Dna.Sites\BBC.Dna.Sites%29</Name>
+    </ProjectReference>
     <ProjectReference Include="..\BBC.Dna.Utils\BBC.Dna.Utils.csproj">
       <Project>{52E9F388-5ED0-4D9C-9A7D-53F92EA21D1D}</Project>
       <Name>BBC.Dna.Utils %28Source\Shared\BBC.Dna.Utils\BBC.Dna.Utils%29</Name>
