--- a/Main/Tests/FunctionalTests.Services.Moderation/FunctionalTests.Services.Moderation.csproj
+++ b/Main/Tests/FunctionalTests.Services.Moderation/FunctionalTests.Services.Moderation.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{9CA32BFC-3AF7-411C-BBEC-1B232DEF0569}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>BBC.Dna.Services.Comments.Functional.Tests</RootNamespace>
-    <AssemblyName>BBC.Dna.Services.Comments.Functional.Tests</AssemblyName>
+    <RootNamespace>FunctionalTests.Services.Moderation</RootNamespace>
+    <AssemblyName>FunctionalTests.Services.Moderation</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
