--- a/Main/Source/Shared/TestUtils/TestUtils.csproj
+++ b/Main/Source/Shared/TestUtils/TestUtils.csproj
@@ -117,6 +117,7 @@
     <Compile Include="DataReaderFactory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RandomStringGenerator.cs" />
+    <Compile Include="SeleniumTestHarness.cs" />
     <Compile Include="Serializer.cs" />
     <Compile Include="SnapshotInitialisation.cs">
       <SubType>Code</SubType>
@@ -170,7 +171,7 @@
     </ProjectReference>
     <ProjectReference Include="..\BBC.Dna.Data\BBC.Dna.Data.csproj">
       <Project>{F79CF818-D597-4C2F-A61D-87773951E234}</Project>
-      <Name>BBC.Dna.Data %28Source\Shared\BBC.Dna.Data\BBC.Dna.Data%29</Name>
+      <Name>BBC.Dna.Data</Name>
     </ProjectReference>
     <ProjectReference Include="..\BBC.Dna.Moderation.Utils.Tests\BBC.Dna.Moderation.Utils.Tests.csproj">
       <Project>{CD50FF01-F604-4C12-BFE7-199CE495313F}</Project>
