--- a/Main/Tests/Selenium.Tests/Selenium.Tests.csproj
+++ b/Main/Tests/Selenium.Tests/Selenium.Tests.csproj
@@ -59,6 +59,7 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="MBBoardsV2.cs" />
+    <Compile Include="ThreadSearch.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
