--- a/Main/Source/Databases/The Guide/storedprocedures/storedprocedures.csproj
+++ b/Main/Source/Databases/The Guide/storedprocedures/storedprocedures.csproj
@@ -1277,6 +1277,7 @@
     <None Include="addTermsFilterUpdate.sql" />
     <None Include="addTermsFilterTerm.sql" />
     <None Include="commentratingcreate.sql" />
+    <None Include="Extdev_ApplyRoles.sql" />
     <None Include="registerverifiedcomplaint.sql" />
     <None Include="createnewuserforforum.sql" />
     <None Include="getcontribution.sql" />
