--- a/Release/Source/Web Services/BBC.DNA.Dnapages/BBC.DNA.Dnapages.csproj
+++ b/Release/Source/Web Services/BBC.DNA.Dnapages/BBC.DNA.Dnapages.csproj
@@ -129,6 +129,13 @@
     <Compile Include="ContentSignifPage.aspx.designer.cs">
       <DependentUpon>ContentSignifPage.aspx</DependentUpon>
     </Compile>
+    <Compile Include="HostDashboardUserActivity.aspx.cs">
+      <DependentUpon>HostDashboardUserActivity.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="HostDashboardUserActivity.aspx.designer.cs">
+      <DependentUpon>HostDashboardUserActivity.aspx</DependentUpon>
+    </Compile>
     <Compile Include="EditPost.aspx.cs">
       <DependentUpon>EditPost.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -918,6 +925,7 @@
     <Content Include="App_Data\forum scheduled closed.xml" />
     <Content Include="App_Data\test_template6music.htm" />
     <Content Include="App_Data\test_templateBlast.htm" />
+    <Content Include="HostDashboardUserActivity.aspx" />
     <Content Include="EditPost.aspx" />
     <Content Include="mbfrontpage.aspx" />
     <Content Include="frontpageredirector.aspx" />
