--- a/Main/Source/Databases/The Guide/storedprocedures/storedprocedures.csproj
+++ b/Main/Source/Databases/The Guide/storedprocedures/storedprocedures.csproj
@@ -1278,6 +1278,8 @@
     <None Include="addTermsFilterUpdate.sql" />
     <None Include="addTermsFilterTerm.sql" />
     <None Include="commentratingcreate.sql" />
+    <None Include="addbannedusersipaddress.sql" />
+    <None Include="removebannedusersipaddress.sql" />
     <None Include="getuserevents.sql" />
     <None Include="InsertUserPostEvents.sql" />
     <None Include="getmoderationpostsfastmodfirst.sql" />
