--- a/Main/Web.config
+++ b/Main/Web.config
@@ -27,13 +27,14 @@
   <connectionStrings>
     <clear /> <!-- this stops inheritance from any other configuration files -->
     <add name="ContributionsEntities" connectionString="metadata=res://*/Contributions.csdl|res://*/Contributions.ssdl|res://*/Contributions.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=.;Initial Catalog=TheGuide;Integrated Security=True;MultipleActiveResultSets=True&quot;" providerName="System.Data.EntityClient" />
-    <add name="Database" connectionString="database=smallguide; server=.; user id=sa; password=marcusp; pooling=false" providerName="System.Data.SqlClient" />
+    <add name="Database" connectionString="database=smallguide; server=.; user id=ripley; password=p4ck3t0fthr333; pooling=false" providerName="System.Data.SqlClient" />
     <add name="IdentityURL" connectionString="https://api.stage.bbc.co.uk/opensso/identityservices/IdentityServices;dna live;10.152.4.15:80;logging" providerName="" />
+     <!--<add name="IdentityURL" connectionString="https://api.test.bbc.co.uk/opensso/identityservices/IdentityServices;dna;http://www-cache.reith.bbc.co.uk:80;logging" providerName="" />-->
     <add name="ProfileRead" connectionString="server=ops-dbdev1.national.core.bbc.co.uk; port=3312; user id=profile; password=crudmeister; database=mdb; pooling=true" providerName="MySql.Data.MySqlClient" />
     <add name="ProfileWrite" connectionString="server=ops-dbdev1.national.core.bbc.co.uk; port=3312; user id=profile; password=crudmeister; database=mdb; pooling=true" providerName="MySql.Data.MySqlClient" />
 
     <!-- updateSP should use sa user as it restores snapshots - THIS SHOULD NOT BE PUBLISHED TO LIVE -->
-    <add name="updateSP" connectionString="database=smallguide; server=.; user id=sa; password=marcusp; pooling=false" providerName="System.Data.SqlClient" />
+    <add name="updateSP" connectionString="database=smallguide; server=.; user id=ripley; password=p4ck3t0fthr333; pooling=false" providerName="System.Data.SqlClient" />
 
   </connectionStrings>
   <cachingConfiguration defaultCacheManager="Cache Manager">
@@ -75,6 +76,8 @@
 	<add key="TwitterUserName" value="BBC_DNA_Search" />
 	<add key="TwitterPassword" value="WelCome12" />
 	
+	<!-- Buzz Profile API -->
+	<add key="BuzzProfileAPI" value="https://admin.int.bbc.co.uk/buzz/admin/profiles/" />
   </appSettings>
   <system.web>
 
@@ -151,6 +154,7 @@
       <add name="ScriptHandlerFactoryAppServices" verb="*" path="*_AppService.axd" preCondition="integratedMode" type="System.Web.Script.Services.ScriptHandlerFactory, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
       <add name="ScriptResource" preCondition="integratedMode" verb="GET,HEAD" path="ScriptResource.axd" type="System.Web.Handlers.ScriptResourceHandler, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
     </handlers>
+    
     <validation validateIntegratedModeConfiguration="false" />
   </system.webServer>
   <system.serviceModel>
@@ -158,13 +162,20 @@
       <endpoint binding="basicHttpBinding" contract="BBC.Dna.Api" name="CommentServiceEndPoint" />
 	  <endpoint binding="webHttpBinding" contract="BBC.Dna.SocialAPI.ITwitter" name="TwitterClient" bindingConfiguration="IncreasedTimeout"
 	  address="http://api.twitter.com/1" behaviorConfiguration="twitter"/>
+      <endpoint binding="webHttpBinding" contract="BBC.Dna.SocialAPI.IBuzz" name="BuzzProfileClient" bindingConfiguration="SecuredBuzzChannel" 
+	  address="http://api.int.bbc.co.uk/buzz/admin/" behaviorConfiguration="buzz"/>
     </client>
 	<bindings>
 		<webHttpBinding>
-			<binding name="IncreasedTimeout"
-					 sendTimeout="00:15:00" useDefaultWebProxy="true" bypassProxyOnLocal="false" 
-					 openTimeout="00:15:00" closeTimeout="00:15:00" receiveTimeout="00:15:00" maxReceivedMessageSize="65536000" >
-					  <security mode = "TransportCredentialOnly">
+		<binding name="IncreasedTimeout"
+				 sendTimeout="00:15:00" useDefaultWebProxy="true" bypassProxyOnLocal="false" 
+				 openTimeout="00:15:00" closeTimeout="00:15:00" receiveTimeout="00:15:00" maxReceivedMessageSize="65536000" >
+				  <security mode = "TransportCredentialOnly">
+					<transport clientCredentialType="Basic" realm="Twitter API" />
+				 </security>
+		</binding>
+		<binding name="SecuredBuzzChannel" sendTimeout="00:15:00" useDefaultWebProxy="true" bypassProxyOnLocal="false" openTimeout="00:15:00" closeTimeout="00:15:00" receiveTimeout="00:15:00" maxReceivedMessageSize="65536000">
+					  <security mode="TransportCredentialOnly">
 						<transport clientCredentialType="Basic" realm="Twitter API" />
 					 </security>
 			</binding>
@@ -175,9 +186,12 @@
         <behavior name="RestServiceEndPointBehaviour">
           <webHttp />
         </behavior>
-		<behavior name="twitter">
+		    <behavior name="twitter">
           <webHttp />
-		  <dataContractSerializer maxItemsInObjectGraph="2147483647" />
+		      <dataContractSerializer maxItemsInObjectGraph="2147483647" />
+        </behavior>
+        <behavior name="buzz">
+          <webHttp />
         </behavior>
       </endpointBehaviors>
       <serviceBehaviors>
