--- a/Main/Source/Windows Services/DnaEventsService/DnaEventProcessorService/Properties/Settings.settings
+++ b/Main/Source/Windows Services/DnaEventsService/DnaEventProcessorService/Properties/Settings.settings
@@ -47,17 +47,35 @@
     <Setting Name="DebugOn" Type="System.Boolean" Scope="Application">
       <Value Profile="(Default)">True</Value>
     </Setting>
-    <Setting Name="BIEventsProcessor_RecordRiskModDecisionsOnPost" Type="System.Boolean" Scope="Application">
-      <Value Profile="(Default)">True</Value>
-    </Setting>
-    <Setting Name="BIEventsOn" Type="System.Boolean" Scope="Application">
-      <Value Profile="(Default)">True</Value>
-    </Setting>
     <Setting Name="SiteEventsOn" Type="System.Boolean" Scope="Application">
       <Value Profile="(Default)">False</Value>
     </Setting>
     <Setting Name="BIEventsProcessor_NumThreads" Type="System.Int32" Scope="Application">
       <Value Profile="(Default)">32</Value>
+    </Setting>
+    <Setting Name="DatabaseEmailProcessor_Interval" Type="System.Int32" Scope="Application">
+      <Value Profile="(Default)">5000</Value>
+    </Setting>
+    <Setting Name="DatabaseEmaiProcessor_NumThreads" Type="System.Int32" Scope="Application">
+      <Value Profile="(Default)">1</Value>
+    </Setting>
+    <Setting Name="DatabaseEmaiProcessor_BatchSize" Type="System.Int32" Scope="Application">
+      <Value Profile="(Default)">20</Value>
+    </Setting>
+    <Setting Name="BIEventsProcessor_RecordRiskModDecisionsOnPost" Type="System.Boolean" Scope="Application">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
+    <Setting Name="BIEventsOn" Type="System.Boolean" Scope="Application">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
+    <Setting Name="DatabaseEmailsOn" Type="System.Boolean" Scope="Application">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
+    <Setting Name="DatabaseEmailProcessor_SMTPSettings" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">ops-fs0.national.core.bbc.co.uk</Value>
+    </Setting>
+    <Setting Name="DatabaseEmailProcessor_MaxRetryAttempts" Type="System.Int32" Scope="Application">
+      <Value Profile="(Default)">3</Value>
     </Setting>
   </Settings>
 </SettingsFile>
