--- a/Main/Source/Shared/DnaIdentityWebServiceProxy/DnaIdentityWebServiceProxy.csproj
+++ b/Main/Source/Shared/DnaIdentityWebServiceProxy/DnaIdentityWebServiceProxy.csproj
@@ -57,8 +57,8 @@
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
+    <OutputPath>bin\Debug\</OutputPath>
+    <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <RegisterForComInterop>true</RegisterForComInterop>
