--- a/Main/Source/Windows Services/DnaEventsService/DnaEventProcessorService/DnaEventProcessorService.csproj
+++ b/Main/Source/Windows Services/DnaEventsService/DnaEventProcessorService/DnaEventProcessorService.csproj
@@ -76,7 +76,7 @@
     <GenerateManifests>true</GenerateManifests>
   </PropertyGroup>
   <PropertyGroup>
-    <SignManifests>true</SignManifests>
+    <SignManifests>false</SignManifests>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.Practices.EnterpriseLibrary.Caching, Version=4.1.0.0, Culture=neutral, PublicKeyToken=54b8fe30038faf0d, processorArchitecture=MSIL">
