--- a/Main/Source/Shared/BBC.Dna.Common/BBC.Dna.Common.csproj
+++ b/Main/Source/Shared/BBC.Dna.Common/BBC.Dna.Common.csproj
@@ -56,6 +56,7 @@
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Runtime.Serialization">
       <RequiredTargetFramework>3.0</RequiredTargetFramework>
     </Reference>
